# Kug

./: .gitmodules
Kug_App/: .gitignore  Button.gdns  ChatInterface.tscn  Client.gdns  Kug_Lib.gdnlib  Login Screen.gdns  Login Screen.tscn  Main.tscn  Node.gdns  kug_dark_theme.tres  project.godot
Kug_Lib/: Cargo.toml  build.py
Kug_Lib/src/: lib.rs
Kug_Lib/src/app/: client.rs
Kug_Lib/src/classes/: user.rs
Kug_Lib/src/login/: login_button.rs  login_check.rs  mod.rs
Kug_Lib/xmpp/: Cargo.toml
Kug_Lib/xmpp/examples/: client.rs
Kug_Lib/xmpp/src/: client.rs  lib.rs  packet.rs  user.rs  xmpp_stream.rs
