[package]
name = "kug_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative="0.11"
xmpp={path = "./xmpp-rs/xmpp/"}


[patch.crates-io]
tokio-xmpp={path="./xmpp-rs/tokio-xmpp/"}


[lib]
crate-type=['cdylib']
