[package]
name = "xmpp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jid = { version = "0.9.4", features = ["serde"] }
minidom = "0.15.2"
xmpp-parsers = "0.19.2"
serde = "1.0.163"
trust-dns-resolver = "0.22.0"
sasl = "0.5.0"
base64 = "0.21.0"
xml-rs = "0.8.13"
